--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1, h2, h3, h4, h5, h6, p, a, strong, b {
+        @apply text-white
+    }
+}
+
+html {
+    @apply bg-neutral-black-1;
+}
